# hospital_sim

./: README.md  package.xml
docs/: RESEARCH.md  architecture.md
launch/: simulation.launch.py
src/: noisy_lidar.cpp  noisy_livox_mid360.cpp  noisy_livox_mid70.cpp  noisy_odom.cpp
urdf/: tracer2.gazebo
urdf/sensors/: livox_mid360.xacro
