<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hospital_sim</name>
  <version>0.1.0</version>
  <description>
    ROS 2 / Ignition Gazebo hospital simulation for the AgileX Tracer 2.
    Implements a physics-grounded C++ sensor noise pipeline (IMU Gauss-Markov,
    LiDAR range-dependent Gaussian, wheel odometry slip + yaw drift) to close
    the sim-to-real gap in indoor AGV localization.
  </description>

  <maintainer email="narcisabellal@iqs.url.edu">Narcis Abella</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Narcis-Abella/hospital_sim</url>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ compile + link dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Runtime: Python legacy noise prototypes -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Runtime: simulation infrastructure -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- IGN_GAZEBO_RESOURCE_PATH is set at runtime in simulation.launch.py -->
  </export>
</package>
